# Credit-score

./: README.md  pyproject.toml  requirements.txt
credit-score/: __init__.py  __main__.py  data_analysis.ipynb  functions.py  main.ipynb  metrics.py  models.py  preprocessors.py
credit-score/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
credit-score/catboost_info/learn/: events.out.tfevents
data/: catboost.csv  dtc.csv  gbc.csv  knn.csv  lgb.csv  lightautoml.csv  lr.csv  my_gbc.csv  nb.csv  rfc.csv  xgb.csv
vavgb/: __init__.py  model.py
