[tool.poetry]
name = "credit-score"
version = "0.1.0"
description = ""
authors = ["Sashavav <vav110011@gmail.com>"]
readme = "README.md"
packages = [{include = "credit_score"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
